deployments/vue-laravel/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-php
  namespace: demo-app
spec:
  selector:
    app: laravel-php
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
